# uvhttp

./: .brand-guidelines.md  .clang-format  .editorconfig  .gitignore  .gitmodules  .quality-checklist.md  AI_AGENT_GUIDE.md  BUILD_GUIDE.md  CHANGELOG.md  CMakeLists.txt  CMakeLists.txt.rej  CODE_REVIEW_DEEP_ANALYSIS.md  CODE_REVIEW_FINAL_REPORT.md  CODE_REVIEW_REPORT.md  CODING_STYLE.md  COMPRESSION_FEATURE_REPORT.md  CONTRIBUTING.md  DEVELOPMENT_GUIDELINES.md  DOCUMENTATION_TEST_REPORT.md  DOCUMENTATION_UPDATE_SUMMARY.md  Doxyfile  GNUmakefile  IFLOW.md  JUSTFILE_GUIDE.md  LICENSE  Makefile  PROJECT_REVIEW.md  PR_REVIEW_FINAL_REPORT.md  PR_REVIEW_REPORT.md  README.md  README_CN.md  ROADMAP.md  SECURITY_AUDIT_REPORT.md  STRESS_TESTING.md  TEST_FIX_REPORT.md  VERSION  WEBSOCKET_IMPLEMENTATION.md  WEBSOCKET_STRESS_TEST_REPORT.md  build_example.sh  clean.sh  (+44 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  valgrind.supp
benchmark/: BENCHMARK_COMPILE_GUIDE.md  CMakeLists.txt  Dockerfile  README.md  TESTING_GUIDE.md  analyze_results.py  benchmark.cmake  benchmark_comprehensive.c  benchmark_config.yml  benchmark_connection.c  benchmark_database_simulation.c  benchmark_file_transfer.c  benchmark_file_upload.c  benchmark_latency.c  benchmark_memory.c  benchmark_router.c  benchmark_router_comparison.c  benchmark_router_minimal.c  benchmark_router_simple.c  benchmark_router_simple_comparison.c  benchmark_rps.c  benchmark_unified.c  (+7 more)
examples/: ASSESSMENT_REPORT.md  CMakeLists.txt  Makefile.examples  README.md  advanced_static_server.c  allocator_config.h  allocator_example.c  api_demo.c  app_advanced_memory.c  cache_test_server.c  config_demo.c  cors_rate_limit_demo.c  custom_allocator.c  custom_allocator_example.c  custom_compression_strategy.c  custom_loop.c  default_loop.c  health_check_demo.c  hello_standalone.c  helloworld.c  helloworld_complete.c  hierarchical_allocator_example.c  json_api_demo.c  memory_performance_test.c  middleware_demo.c  mimalloc_demo.c  minimal.c  mtls_server.c  performance_static_server.c  performance_static_server_broken.c  performance_test.c  performance_test_static.c  performance_test_tls.c  performance_test_websocket.c  quick_api_demo.c  restful_api_server.c  restful_todo_api.c  simple_api_demo.c  simple_config.c  simple_server.c  (+16 more)
examples/01_basics/: 01_hello_world.c  CMakeLists.txt  helloworld.c  helloworld_complete.c  quick_api_demo.c  signal_handling_demo.c  simple_api_demo.c  simple_test.c
examples/02_routing/: 01_simple_routing.c  02_method_routing.c  CMakeLists.txt  api_demo.c  json_api_demo.c
examples/03_api_examples/: CMakeLists.txt  restful_blog_api.c  restful_todo_api.c  restful_user_api.c
examples/03_middleware/: CMakeLists.txt  README.md  middleware_chain_demo.c  middleware_compile_time_demo.c  middleware_macros_demo.c  rate_limit_demo.c  simple_middleware_demo.c  test_middleware.c
examples/04_responses/: CMakeLists.txt  unified_response_demo.c
examples/04_static_files/: CMakeLists.txt  advanced_static_server.c  cache_test_server.c  custom_ttl_demo.c  simple_static_test.c  static_file_server.c
examples/05_advanced/: 01_libuv_data_pointer.c  CMakeLists.txt  middleware_macros_demo.c  simple_middleware_demo.c  uvhttp_websocket_auth.h  websocket_auth_server.c
examples/05_websocket/: CMakeLists.txt  test_ws_connection_management.c  websocket_echo_server.c  websocket_test_server.c
examples/06_advanced/: CMakeLists.txt  api_demo.c  app_custom_pool.c  config_demo.c  context_injection.c  json_api_demo.c  protocol_upgrade_example.c  simple_config.c  unified_response_demo.c
examples/06_static_files/: CMakeLists.txt  advanced_static_server.c  cache_test_server.c  simple_static_test.c  static_file_server.c  static_middleware_demo.c
examples/07_config/: CMakeLists.txt  config_demo.c  simple_config.c
examples/07_performance/: CMakeLists.txt  compression_server.c  mimalloc_demo.c  performance_https_server.c  performance_static_server.c  performance_test.c  performance_test_static.c  performance_test_tls.c  performance_websocket_server.c  test_version_api.c
examples/08_e2e_tests/: CMakeLists.txt  test_config_simple_e2e.c  test_connection_simple_e2e.c  test_error_handler_simple_e2e.c  test_error_handling_simple_e2e.c  test_logging_simple_e2e.c  test_lru_cache_simple_e2e.c  test_rate_limit_simple_e2e.c  test_routing_simple_e2e.c  test_utils_simple_e2e.c  test_validation_simple_e2e.c
examples/08_memory/: CMakeLists.txt  app_custom_pool.c
examples/performance_only/: CMakeLists.txt  performance_static_server.c  performance_static_server_broken.c  performance_test.c  performance_test_static.c  performance_test_websocket.c
test/unit/: CMakeLists.txt  simple_test.c  simple_test.cpp  test_allocator.c  test_allocator.cpp  test_allocator_cpp.cpp  test_allocator_full_coverage.cpp  test_async_file_full_coverage.c  test_async_file_full_coverage.cpp  test_async_file_more_coverage.cpp  test_cmocka_simple.cpp  test_compression_helpers.cpp  test_config_enhanced_coverage.cpp  test_config_full_coverage.c  test_config_full_coverage.cpp  test_connection_api_coverage.cpp  test_connection_comprehensive_coverage.cpp  test_connection_enhanced_coverage.cpp  test_connection_extended_coverage.c  test_connection_extended_coverage.cpp  test_connection_full_api_coverage.cpp  test_connection_full_coverage.c  test_connection_full_coverage.cpp  test_connection_full_coverage_enhanced.cpp  test_connection_integration.cpp  test_connection_integration.cpp.disabled  test_connection_lifecycle.cpp  test_connection_lifecycle_mock.cpp  test_connection_missing_coverage.cpp  test_connection_public_api_coverage.cpp  test_connection_simple_mock.cpp  test_connection_websocket_integration.cpp  test_context_extra_coverage.cpp  test_context_full_coverage.c  test_context_full_coverage.cpp  test_context_init_coverage.cpp  test_context_simple.c  test_context_simple.cpp  test_cors_middleware_debug.cpp  test_cors_middleware_extra_coverage.cpp  (+132 more)
test/unit/disabled/: comprehensive_coverage_test.c  uvhttp_test_framework.c  uvhttp_websocket_wrapper.c  uvhttp_websocket_wrapper.h
(+2599 files in other folders)
